MDL-53007 block_navigation: Set width of item text to prevent overflow

--- a/blocks/navigation/styles.css
+++ b/blocks/navigation/styles.css
@@ -49,6 +49,7 @@
 .block_navigation .block_tree .tree_item.hasicon .item-content-wrap {
     display: inline-block;
     white-space: normal;
+    width: calc(100% - 21px);
 }
 
 .block_navigation .block_tree ul {
